[package]
name = "deno_impl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deno_core = "0.153.0"
tokio = { version = "1.21.2", features = ["full"] }
reqwest = "0.11.12"
serde = {version = "1.0.145", features = ["derive"]}